<resources>
    <string name="app_name">URound</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_messages">Messages</string>
    <string name="tittle_profile">Profile</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="email">Email</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="registr">Registr</string>
    <string name="log_out">Log out</string>
    <string name="username">Username</string>
    <string name="ida_virumaa">Ida-Virumaa</string>
    <string name="tallinn">Tallinn</string>
    <string name="all_news">All news</string>
    <string name="chp">CHP</string>


</resources>